# vinh-phoenix

./: .gitignore  .markdownlint-cli2.jsonc  LICENSE  README.md  nightlife.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: lint.yml  release.yml
docs/: README.md  agent-skill-list.md  context-assessment.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  upgrade.md
skills/add-agents/: SKILL.md
skills/add-skills/: SKILL.md
skills/architecture-design/: SKILL.md
skills/architecture-design-review/: SKILL.md
skills/bug-analysis/: SKILL.md
skills/code-refactoring/: SKILL.md
skills/code-review/: SKILL.md
skills/coding/: SKILL.md
skills/coding-standards/: SKILL.md
skills/context-assessment/: SKILL.md
skills/e2e-test-design/: SKILL.md
skills/git-commit/: SKILL.md
skills/graphql/: SKILL.md
skills/healthcare-coding/: SKILL.md
skills/healthcare-requirements-specification/: SKILL.md
skills/healthcare-task-management/: SKILL.md
skills/healthcare-technical-design/: SKILL.md
skills/list-agents/: SKILL.md
skills/list-skills/: SKILL.md
skills/nextjs-mockup/: SKILL.md
skills/nuxtjs-mockup/: SKILL.md
skills/project-consistency-analysis/: SKILL.md
skills/project-ground-rules-setup/: SKILL.md
skills/project-management/: SKILL.md
skills/requirements-specification/: SKILL.md
skills/requirements-specification-review/: SKILL.md
skills/sync-skills/: SKILL.md
skills/task-management/: SKILL.md
skills/tasks-to-azure-devops/: SKILL.md
(+266 files in other folders)
