[project]
name = "phoenix-cli"
version = "0.1.0"
description = "Phoenix CLI - Installs 18 agent skills that AI assistants automatically discover and use on demand for structured software development."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
phoenix = "phoenix_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phoenix_cli"]

