[project]
name = "phoenix-cli"
version = "0.3.22"
description = "Phoenix CLI - Drive Quality Together with a Core Installer Framework for AI Agent Skills."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
phoenix = "phoenix_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phoenix_cli"]

